# binance-cli

./: Cargo.toml
src/: main.rs
