[package]
name = "binance-cli"
version = "0.1.0"
description = "manage your binance account"
authors = ["ihsan <ihsanl@pm.me>"]
edition = "2018"

[dependencies]
binance = { git = "https://github.com/wisespace-io/binance-rs.git" }

[dependencies.clap]
version = "3.0.0-beta.2"
features = [ "suggestions", "color" ]

